--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "on-body-ready",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "callback when document.body exists",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@ndhoule/keys": "^2.0.0"
+    "@ndhoule/each": "^2.0.1"
   }
 }
